Fix moz overflow scroll bug on content wrap.

--- a/resources/assets/styles/layouts/_space.scss
+++ b/resources/assets/styles/layouts/_space.scss
@@ -228,6 +228,10 @@ article.space {
         letter-spacing: -0.029em;
         color: $smokey;
         text-shadow: $box-shadow-float-submenu;
+
+        @include respond(sm) {
+          font-size: $type-3;
+        }
       }
     }
 
@@ -241,6 +245,10 @@ article.space {
       background-color: $white;
       box-shadow: $box-shadow;
 
+      @include respond(sm) {
+        width: 50%;
+      }
+
       @include respond(xs) {
         width: 100%;
         height: 61.8%;
@@ -251,7 +259,10 @@ article.space {
         overflow-y: scroll;
         overflow-x: hidden;
         height: 100%;
-        padding-bottom: 182px;
+
+        > *:last-child {
+          margin-bottom: 160px;
+        }
 
         &--funnel {
           font-size: $type-1;
@@ -296,6 +307,10 @@ article.space {
       &--description {
         p {
           font-size: $type-2;
+
+          @include respond(sm) {
+            font-size: $type-1;
+          }
 
           &:last-child {
             margin-bottom: 0;
@@ -361,6 +376,10 @@ article.space {
   position: relative;
   z-index: 1;
   padding: $golden-ratio-3 $golden-ratio-3 9px;
+
+  @include respond(sm) {
+    width: 50%;
+  }
 
   @include respond(xs) {
     width: 100%;
